--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 </head>
 <body class="container">
     <header>
-        <h1>Lab Assessment 1</h1>
+        <h1>ahmed afraz backer -1150679</h1>
     </header>
     <main>
         <div class="row">
             <div class="col-md-3">
                 <h2 class="headingSecondary">Column 1</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>this is coloumn 1</p>
             </div>
             <div class="col-md-3">
                 <h2 class="headingSecondary">Column 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>this is coloumn 2</p>
             </div>
             <div class="col-md-3">
                 <h2 class="headingSecondary">Column 3</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>this is coloumn 3</p>
             </div>
             <div class="col-md-3">
                 <h2 class="headingSecondary">Column 4</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p>this is coloumn 4</p>
             </div>
         </div>
         <div class="row">
