--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
     <title>1150679</title> 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body class="container">
