--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>ahmed afraz backer -1150679</h1>
     </header>
     <main>
+        <div class="headingPrimary"></div>
         <div class="row">
             <div class="col-md-3">
                 <h2 class="headingSecondary">Column 1</h2>
